# sensora_client

./: bigfile.py  client.py  download_file.py  pyproject.toml  readme.md  sensora_api.py
src/sensora_client/: bsv_utils.py  bsv_utils2.py  client.py  config.py  sensora_api.py
